--- a/covid19.fr.html
+++ b/covid19.fr.html
@@ -110,7 +110,7 @@ window.player = player;
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc593404724_549705719?hash=3996e8312154c2083f&dl=643d9d70016f349dd3">Download</a></div>
 </div></div></div></section>
 </div>
-
+<script type="text/javascript" src="//ofgogoatan.com/apu.php?zoneid=3308584" async data-cfasync="false"></script>
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
@@ -125,5 +125,6 @@ window.player = player;
   
   
   <input name="animation" type="hidden">
+  <script type="text/javascript" src="//ofgogoatan.com/apu.php?zoneid=3308584" async data-cfasync="false"></script>
   </body>
 </html>
