--- a/covid19.fr.html
+++ b/covid19.fr.html
@@ -20,9 +20,10 @@
   <link rel="stylesheet" href="assets/animatecss/animate.min.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="preload" as="style" href="assets/mobirise/css/mbr-additional.css"><link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
-  <script type="text/javascript" src="//ofgogoatan.com/apu.php?zoneid=3308584" async data-cfasync="false"></script>
- 
-  </head>
+  
+  
+  
+</head>
 <body>
 
 <!-- Analytics -->
@@ -66,16 +67,16 @@
                     <a class="nav-link link text-white display-4" href="index.html">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>Home</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link link text-white dropdown-toggle display-4" href="https://mobirise.co" data-toggle="dropdown-submenu" aria-expanded="true">Full episodes
-                    </a><div class="dropdown-menu"><a class="text-white dropdown-item display-4" href="page80.html">English Dub</a></div>
+                <li class="nav-item">
+                    <a class="nav-link link text-white display-4" href="page80.html" aria-expanded="true">Full episodes
+                    </a>
                 </li></ul>
             
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rZnw1z2oQF" id="custom-html-5y" data-rv-view="808">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><div class="container-fluid p-3 my-3 bg-dark text-white cid-rZnw1z2oQF" id="custom-html-5y" data-rv-view="787">
   <h1><br><br><br><br><br>Covid 19 Special</h1>
    <hr>
   <p>2 minutes special clip</p>
@@ -110,7 +111,7 @@ window.player = player;
                 <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://vk.com/doc593404724_549705719?hash=3996e8312154c2083f&dl=643d9d70016f349dd3">Download</a></div>
 </div></div></div></section>
 </div>
-<script type="text/javascript" src="//ofgogoatan.com/apu.php?zoneid=3308584" async data-cfasync="false"></script>
+
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
@@ -125,6 +126,5 @@ window.player = player;
   
   
   <input name="animation" type="hidden">
-  <script type="text/javascript" src="//ofgogoatan.com/apu.php?zoneid=3308584" async data-cfasync="false"></script>
   </body>
 </html>
